# local-legal-agent-team2

./: .env.py  .gitignore  README.md  local_legal_agent.py  pyproject.toml  requirements.txt
venv_local/: pyvenv.cfg
